Fixed the issues presented by the gitLab comments